blazor modules implemented

--- a/modules/src/Syrna.FileManagement.Domain.Shared/Syrna/FileManagement/Localization/en.json
+++ b/modules/src/Syrna.FileManagement.Domain.Shared/Syrna/FileManagement/Localization/en.json
@@ -8,6 +8,7 @@
     "Menu:FileManagement": "File management",
     "Menu:File": "File",
     "File": "File",
+    "FileId": "File Id",
     "FileFileName": "File name",
     "FileFileContainerName": "File container name",
     "FileMimeType": "Mime type",
@@ -26,6 +27,10 @@
     "MoveFile": "Move",
     "FileDeletionConfirmationMessage": "Are you sure to delete the file {0}?",
     "SuccessfullyDeleted": "Successfully deleted",
+    "SuccessfullyMoved": "Successfully moved",
+    "SuccessfullyRenamed": "Successfully renamed",
+    "SuccessfullyUploaded": "Files successfully uploaded",
+    "FolderSuccessfullyCreated": "Folder successfully created",
     "LastModifier": "Modifier",
     "LastModificationTime": "Modified",
     "Creator": "Creator",
@@ -36,6 +41,20 @@
     "Details": "Details",
     "Download": "Download",
     "Rename": "Rename",
-    "Move": "Move"
+    "Move": "Move",
+    "FileContent": "File Content",
+    "DirectoryFileContentIsNotEmpty": "Content should be empty if the file is a directory.",
+    "FileAlreadyExists": "The file ({filePath}) already exists.",
+    "FileAlreadyExistsWithParent": "The file (name: {fileName}, parentId: {parentId}) already exists.",
+    "FileExtensionIsNotAllowed": "The extension of {fileName} is not allowed.",
+    "FileIsMovingToSubDirectory": "A directory cannot be moved from a directory to one of its sub directories.",
+    "FileNameContainsSeparator": "The file name ({fileName}) should not contains the separator ({separator}).",
+    "FileSizeExceededLimit": "The size of the file (name: {fileName}, size: {fileByteSize}) exceeded the limit: {maxByteSize}.",
+    "UnexpectedFileContainerName": "The FileContainerName ({fileContainerName}) is unexpected.",
+    "UnexpectedFileContainerNameWith": "The FileContainerName ({fileContainerName}) is unexpected, it should be {expectedFileContainerName}.",
+    "UnexpectedFileTypeException": "The type ({fileType}) of the file ({fileId}) is unexpected.",
+    "UnexpectedFileTypeExceptionWith": "The type ({fileType}) of the file ({fileId}) is unexpected, it should be {expectedFileType}.",
+    "UploadQuantityExceededLimit": "The quantity of the files ({uploadQuantity}) exceeded the limit: {maxQuantity}.",
+    "UploadSizeExceededLimit": "The total size of the files ({uploadByteSize}) exceeded the limit: {maxByteSize}."
   }
 }
